--- a/playbooks/config.yaml
+++ b/playbooks/config.yaml
@@ -1,5 +1,7 @@
 VPNNAME: MXtoAWS2
-PINGIP: 172.31.26.184
+#PINGIP: 172.31.26.184
+# two third pary firewall rules are defined below
+# rule 1
 comment1: "Deny HTTPS Traffic"
 policy1: deny
 protocol1: tcp
@@ -8,10 +10,11 @@ destCidr1: Any
 srcPort1: Any
 srcCidr1: Any
 syslogEnabled1: false
+# rule 2
 comment2: "Allow ICMP Traffic2"
 policy2: allow
 protocol2: icmp
 destCidr2: Any
 srcCidr2: Any
 syslogEnabled2: false
-region: eu-west-1
+#region: eu-west-1
