--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -11,7 +11,6 @@
     region: "{{ REGION }}"
     PSK: "{{ PSK }}"
     RTID: "{{ RTID }}"
-    #SSH_KEY: "{{ SSH_KEY }}"
 
   vars_files:
     - config.yaml
@@ -23,6 +22,8 @@
     - name: include variables for devices
       include_vars:
         file: config.yaml
+        
+# Meraki information gathering
 
     - name: GET The MX UPLINK Public IP
       uri:
@@ -50,7 +51,8 @@
         validate_certs: true
       register: meraki_subnets
 
-# AWS part
+# AWS information gathering and VPN configuration:
+
     - name: GET AWS Network info
       ec2_vpc_net_info:
         region: "{{ region }}"
@@ -113,7 +115,7 @@
       set_fact:
         cgw_id: "{{ cgw.gateway.customer_gateway.customer_gateway_id }}"
 
-    - name: create a VPN connection
+    - name: create a VPN configuration
       ec2_vpc_vpn:
         state: present
         static_only: true
@@ -129,7 +131,8 @@
           - "{{ meraki_subnets.json.0.subnet }}"
       register: vpn
 
-#set up meraki VPN 
+# Set up meraki VPN and Firewall
+
     - name: SET third party VPN
       uri:
         url: https://api.meraki.com/api/v1/organizations/265528/appliance/vpn/thirdPartyVPNPeers
