--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -55,7 +55,7 @@
 
     - name: GET AWS Network info
       ec2_vpc_net_info:
-        region: "{{ region }}"
+        region: "{{ AWS_REGION }}"
       register: vpc_ids
 
     - debug:
@@ -76,7 +76,7 @@
     - name: Propagate routes from the newly created VGW
       ec2_vpc_route_table:
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
-        region: "{{ region }}"
+        region: "{{ AWS_REGION }}"
         route_table_id: "{{ RTID }}"
         state: present
         lookup: id
@@ -93,7 +93,7 @@
     - name: Identify the VPC IGW
       ec2_vpc_igw:
         vpc_id: "{{ vpc_ids.vpcs.0.vpc_id }}"
-        region: "{{ region }}"
+        region: "{{ AWS_REGION }}"
         state: present
       register: igw
 
@@ -105,7 +105,7 @@
         bgp_asn: 12345
         ip_address: "{{ meraki_uplink.json.1.uplinks.0.publicIp }}"
         name: Ansible_Meraki_MX
-        region: "{{ region }}"
+        region: "{{ AWS_REGION }}"
       register: cgw
 
     - debug:
@@ -119,7 +119,7 @@
       ec2_vpc_vpn:
         state: present
         static_only: true
-        region: "{{ region }}"
+        region: "{{ AWS_REGION }}"
         vpn_gateway_id: "{{ created_vgw.vgw.id }}"
         customer_gateway_id: "{{ cgw.gateway.customer_gateway.customer_gateway_id }}"
         tunnel_options:
