--- a/playbooks/config.yaml
+++ b/playbooks/config.yaml
@@ -2,7 +2,7 @@ VPNNAME: MXtoAWS2
 # two third pary firewall rules are defined below
 # rule 1
 comment1: "Deny HTTPS Traffic"
-policy1: allow
+policy1: deny
 protocol1: tcp
 destPort1: 443
 destCidr1: Any
