--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -55,7 +55,7 @@
 
     - name: GET AWS Network info
       ec2_vpc_net_info:
-        region: "{{ AWS_REGION }}"
+        region: eu-west-1
       register: vpc_ids
 
     - debug:
