--- a/playbooks/config.yaml
+++ b/playbooks/config.yaml
@@ -1,8 +1,8 @@
 VPNNAME: MXtoAWS2
 # two third pary firewall rules are defined below
 # rule 1
-comment1: "deny HTTPS Traffic"
-policy1: deny
+comment1: "any  HTTPS Traffic"
+policy1: any
 protocol1: tcp
 destPort1: 443
 destCidr1: Any
